Bug #623 - forced text wrap in FF for download file name

--- a/src/feeddb/feed/static/src/less/custom.less
+++ b/src/feeddb/feed/static/src/less/custom.less
@@ -342,6 +342,7 @@ body { background: url('../../../../../images/satinweave.png'); color: @navy; co
         &:first-child { width: 30px !important; }
       }
     }
+    .file-name { word-wrap: break-word; }
     footer { margin-top: 0; }
   }
   &.history {
